--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit
-pandas
-openpyxl
-psycopg[binary]
-python-dotenv
-google-api-python-client
-google-auth
+streamlit>=1.36
+pandas>=2.2
+psycopg[binary]>=3.2
+google-api-python-client>=2.140
+google-auth>=2.33
+google-auth-oauthlib>=1.2
+bcrypt>=4.1
+python-dateutil>=2.9
+
