--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit>=1.36
+streamlit>=1.33,<2
 pandas>=2.2
-psycopg[binary]>=3.2
-google-api-python-client>=2.140
-google-auth>=2.33
-google-auth-oauthlib>=1.2
-bcrypt>=4.1
-python-dateutil>=2.9
+psycopg[binary]>=3.1      # usamos psycopg v3, NO psycopg2
+google-api-python-client>=2.144.0
+google-auth>=2.33.0
+google-auth-httplib2>=0.2.0
+google-auth-oauthlib>=1.2.0
+bcrypt>=4.1.2
+
 
